# tree-sitter-diff

./: .gitattributes  .gitignore  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  flake.nix  go.mod  grammar.js  package-lock.json  package.json  playground.js  pyproject.toml  setup.py  tree-sitter-diff.wasm  tree-sitter-git_diff.wasm  tree-sitter-gitdiff.wasm
.github/workflows/: ci.yml  generate-parser.yml
bindings/c/: tree-sitter-diff.h  tree-sitter-diff.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_diff/: __init__.py  binding.c
bindings/rust/: lib.rs
bindings/swift/TreeSitterDiff/: diff.h
bindings/swift/TreeSitterDiffTests/: TreeSitterDiffTests.swift
docs/: index.html  playground.js
src/: grammar.json  node-types.json  parser.c
test/corpus/: binary.txt  text.txt
