[package]
name = "tree-sitter-diff"
description = "Diff grammar for tree-sitter"
version = "0.2.3"
keywords = ["incremental", "parsing", "tree-sitter", "diff"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-diff"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[build-dependencies]
cc = "1.0"
